# ProtoText

./: CMakeLists.txt  README.md  make.bat
include/: MainWindow.h  TextEditor.h  UtilFunctions.h  Window.h  WindowCircle.h
src/: MainWindow.cpp  TextEditor.cpp  WindowCircle.cpp  main.cpp
